Sutter Health/src/objects/S3_PCD__c.object
<CustomObject>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <formula>Employee__r.Employee_Anniversary_Date__c</formula>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <label>Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Unapproved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budgeted__c</fullName>
        <label>Budgeted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budgeted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Unbudgeted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Release__c</fullName>
        <label>Business Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BR 1</fullName>
                </value>
                <value>
                    <fullName>BR 2</fullName>
                </value>
                <value>
                    <fullName>BR 3</fullName>
                </value>
                <value>
                    <fullName>BR 4</fullName>
                </value>
                <value>
                    <fullName>BR 5</fullName>
                </value>
                <value>
                    <fullName>BR 6</fullName>
                </value>
                <value>
                    <fullName>BR 7</fullName>
                </value>
                <value>
                    <fullName>BR 8</fullName>
                </value>
                <value>
                    <fullName>BR 9</fullName>
                </value>
                <value>
                    <fullName>BR 10</fullName>
                </value>
                <value>
                    <fullName>BR 11</fullName>
                </value>
                <value>
                    <fullName>BR 12</fullName>
                </value>
                <value>
                    <fullName>BR 13</fullName>
                </value>
                <value>
                    <fullName>BR 14</fullName>
                </value>
                <value>
                    <fullName>BR 15</fullName>
                </value>
                <value>
                    <fullName>BR 16</fullName>
                </value>
                <value>
                    <fullName>SOPS 1</fullName>
                </value>
                <value>
                    <fullName>SOPS 2</fullName>
                </value>
                <value>
                    <fullName>SOPS 3</fullName>
                </value>
                <value>
                    <fullName>SOPS 4</fullName>
                </value>
                <value>
                    <fullName>SOPS 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Computer_ID__c</fullName>
        <label>Computer ID</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>551020</fullName>
                </value>
                <value>
                    <fullName>551021</fullName>
                </value>
                <value>
                    <fullName>551022</fullName>
                </value>
                <value>
                    <fullName>618611</fullName>
                </value>
                <value>
                    <fullName>8400</fullName>
                </value>
                <value>
                    <fullName>8401</fullName>
                </value>
                <value>
                    <fullName>8402</fullName>
                </value>
                <value>
                    <fullName>8403</fullName>
                </value>
                <value>
                    <fullName>8406</fullName>
                </value>
                <value>
                    <fullName>8510</fullName>
                </value>
                <value>
                    <fullName>8511</fullName>
                </value>
                <value>
                    <fullName>8512</fullName>
                </value>
                <value>
                    <fullName>8514</fullName>
                </value>
                <value>
                    <fullName>8515</fullName>
                </value>
                <value>
                    <fullName>8519</fullName>
                </value>
                <value>
                    <fullName>8530</fullName>
                </value>
                <value>
                    <fullName>8531</fullName>
                </value>
                <value>
                    <fullName>8532</fullName>
                </value>
                <value>
                    <fullName>8533</fullName>
                </value>
                <value>
                    <fullName>8534</fullName>
                </value>
                <value>
                    <fullName>8535</fullName>
                </value>
                <value>
                    <fullName>8536</fullName>
                </value>
                <value>
                    <fullName>8537</fullName>
                </value>
                <value>
                    <fullName>8538</fullName>
                </value>
                <value>
                    <fullName>8539</fullName>
                </value>
                <value>
                    <fullName>8561</fullName>
                </value>
                <value>
                    <fullName>8562</fullName>
                </value>
                <value>
                    <fullName>8569</fullName>
                </value>
                <value>
                    <fullName>8590</fullName>
                </value>
                <value>
                    <fullName>8610</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>S3 Position</relationshipLabel>
        <relationshipName>S3_Position_Emp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adminstration</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Revenue Cycle</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Credential Verification</fullName>
                </value>
                <value>
                    <fullName>Document Management Center</fullName>
                </value>
                <value>
                    <fullName>eQuip</fullName>
                </value>
                <value>
                    <fullName>HR - Project/Growth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Code_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Code Hierarchy</label>
        <referenceTo>S3_PCD__c</referenceTo>
        <relationshipLabel>S3 Positions (Job Code Hierarchy)</relationshipLabel>
        <relationshipName>S3_Position_Heirarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North 1st Flr</fullName>
                </value>
                <value>
                    <fullName>North 2nd Flr</fullName>
                </value>
                <value>
                    <fullName>North 3rd Flr</fullName>
                </value>
                <value>
                    <fullName>South 1st Flr</fullName>
                </value>
                <value>
                    <fullName>South 2nd Flr</fullName>
                </value>
                <value>
                    <fullName>South 3rd Flr</fullName>
                </value>
                <value>
                    <fullName>DMC</fullName>
                </value>
                <value>
                    <fullName>Home-Remote</fullName>
                </value>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mapped_Date__c</fullName>
        <inlineHelpText>When will this SFT mapped position start at S3?</inlineHelpText>
        <label>Mapped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Position__c</fullName>
        <formula>OR( 
ispickval( Status__c , &quot;Active&quot;),
ISNULL( Employee__c ) 
)</formula>
        <label>Open Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Team__c</fullName>
        <label>Process Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Assistant</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Bad Debt and Charity</fullName>
                </value>
                <value>
                    <fullName>Business Release</fullName>
                </value>
                <value>
                    <fullName>Chart Completion</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Clerical Support</fullName>
                </value>
                <value>
                    <fullName>Coding</fullName>
                </value>
                <value>
                    <fullName>Correspondence Team</fullName>
                </value>
                <value>
                    <fullName>Denial Management</fullName>
                </value>
                <value>
                    <fullName>Denial Team</fullName>
                </value>
                <value>
                    <fullName>Desktop Support</fullName>
                </value>
                <value>
                    <fullName>Document Imaging</fullName>
                </value>
                <value>
                    <fullName>EMPI</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Financial Analysis</fullName>
                </value>
                <value>
                    <fullName>Front Desk</fullName>
                </value>
                <value>
                    <fullName>HIM</fullName>
                </value>
                <value>
                    <fullName>Lean</fullName>
                </value>
                <value>
                    <fullName>Liaison</fullName>
                </value>
                <value>
                    <fullName>Nurse Auditor</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Patient Access</fullName>
                </value>
                <value>
                    <fullName>Patient Advocate</fullName>
                </value>
                <value>
                    <fullName>Payment Variance Team</fullName>
                </value>
                <value>
                    <fullName>Payor Management</fullName>
                </value>
                <value>
                    <fullName>Payor Relations</fullName>
                </value>
                <value>
                    <fullName>Pre-Service</fullName>
                </value>
                <value>
                    <fullName>Processing Team</fullName>
                </value>
                <value>
                    <fullName>Quality &amp; Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports To</label>
        <referenceTo>S3_PCD__c</referenceTo>
        <relationshipLabel>S3 Positions</relationshipLabel>
        <relationshipName>S3_Position_Reports_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S3_Positiom_Change_Control__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Change Control</label>
        <referenceTo>S3_Ops__c</referenceTo>
        <relationshipLabel>S3 Positions</relationshipLabel>
        <relationshipName>S3_Positions_ChangeControl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S3_Position_Control__c</fullName>
        <label>Position Control</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFT_Impact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFT Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seat__c</fullName>
        <externalId>true</externalId>
        <label>Seat</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <label>Sub-Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>HR Data &amp; Reporting</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Administrative Assistant</fullName>
                </value>
                <value>
                    <fullName>Operations Management</fullName>
                </value>
                <value>
                    <fullName>Performance Management</fullName>
                </value>
                <value>
                    <fullName>CBO</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Charge Capture/CDM</fullName>
                </value>
                <value>
                    <fullName>Patient Access</fullName>
                </value>
                <value>
                    <fullName>HIM</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Compensation &amp; Benefits</fullName>
                </value>
                <value>
                    <fullName>HR IS</fullName>
                </value>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
                <value>
                    <fullName>HR Delivery</fullName>
                </value>
                <value>
                    <fullName>Learning &amp; Workforce Relations Services</fullName>
                </value>
                <value>
                    <fullName>eQuip Services</fullName>
                </value>
                <value>
                    <fullName>eQuip Tech</fullName>
                </value>
                <value>
                    <fullName>eQuip</fullName>
                </value>
                <value>
                    <fullName>Clinical Engineering</fullName>
                </value>
                <value>
                    <fullName>Medical Physics</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Aramark</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_Employee__c</fullName>
        <formula>Temp_Staff__r.Worker_Name__c</formula>
        <label>Temp Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_End_Date__c</fullName>
        <formula>Temp_Staff__r.Engagement_Through_Date__c</formula>
        <label>Temp End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temp_Staff__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Temp Staff</label>
        <referenceTo>S3_Staffing__c</referenceTo>
        <relationshipLabel>S3 Positions</relationshipLabel>
        <relationshipName>S3_Positions_Temp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp_Supervisor__c</fullName>
        <formula>Temp_Staff__r.Reports_To__c</formula>
        <label>Temp Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Limited (LLT)</fullName>
                </value>
                <value>
                    <fullName>Per Diem</fullName>
                </value>
                <value>
                    <fullName>Limited Term</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vacancy_Reason__c</fullName>
        <inlineHelpText>What is the reason for this postion to be open if not actively recruiting?</inlineHelpText>
        <label>Vacancy Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Planned Vacancy</fullName>
                </value>
                <value>
                    <fullName>Re-Evaluating</fullName>
                </value>
                <value>
                    <fullName>Not Actively Recruiting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workgroup__c</fullName>
        <label>Workgroup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CC-Admin</fullName>
                </value>
                <value>
                    <fullName>CC-AP</fullName>
                </value>
                <value>
                    <fullName>CC-CBO</fullName>
                </value>
                <value>
                    <fullName>Administrative Assistant</fullName>
                </value>
                <value>
                    <fullName>Desktop Support</fullName>
                </value>
                <value>
                    <fullName>S3 HR</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Financial Analysis</fullName>
                </value>
                <value>
                    <fullName>Lean</fullName>
                </value>
                <value>
                    <fullName>Front Desk</fullName>
                </value>
                <value>
                    <fullName>SLA Reporting</fullName>
                </value>
                <value>
                    <fullName>Business Release</fullName>
                </value>
                <value>
                    <fullName>Outpatient</fullName>
                </value>
                <value>
                    <fullName>Inpatient</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Associates</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Coding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>S3 Position</label>
    <listViews>
        <fullName>Administration</fullName>
        <columns>NAME</columns>
        <columns>Cost_Center__c</columns>
        <columns>Employee__c</columns>
        <columns>Function__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>Job_Code__c</columns>
        <columns>Reports_To__c</columns>
        <columns>Anniversary_Date__c</columns>
        <columns>Computer_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Function__c</field>
            <operation>equals</operation>
            <value>Adminstration,Support</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Discontinued</value>
        </filters>
        <filters>
            <field>Cost_Center__c</field>
            <operation>equals</operation>
            <value>8611</value>
        </filters>
        <label>Administration</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>S3_Position_Control__c</columns>
        <columns>Function__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>Status__c</columns>
        <columns>Job_Code__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Approved_Date__c</columns>
        <columns>Employee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Job_Code_List</fullName>
        <columns>NAME</columns>
        <columns>S3_Position_Control__c</columns>
        <columns>Status__c</columns>
        <columns>Function__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>Cost_Center__c</columns>
        <columns>Schedule__c</columns>
        <columns>Reports_To__c</columns>
        <columns>Seat__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Code__c</field>
            <operation>equals</operation>
            <value>90053401</value>
        </filters>
        <label>Job Code List</label>
    </listViews>
    <nameField>
        <displayFormat>PCD{000000}</displayFormat>
        <label>S3 PCD Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3 Positions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>